build/k8s/templates/eaglelogger-postgres.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: eaglelogger-postgres
  labels:
    app: eaglelogger-postgres
    project: eaglelogger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eaglelogger-postgres
      project: eaglelogger
  template:
    metadata:
      name: eaglelogger-postgres
      labels:
        app: eaglelogger-postgres
        project: eaglelogger
    spec:
      volumes:
      - name: eaglelogger-postgres
        persistentVolumeClaim:
          claimName: eaglelogger-postgres
      containers:
      - name: eaglelogger-postgres
        image: kevashcraft/eaglelogger-postgres:latest
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 45
          periodSeconds: 5
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: eaglelogger-postgres
      - name: eaglelogger-cron
        image: kevashcraft/eaglelogger-cron:latest
