build/k8s/templates/eaglelogger-redirect.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: eaglelogger-redirect
  labels:
    app: eaglelogger-redirect
    project: eaglelogger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eaglelogger-redirect
      project: eaglelogger
  template:
    metadata:
      name: eaglelogger-redirect
      labels:
        app: eaglelogger-redirect
        project: eaglelogger
    spec:
      containers:
      - name: eaglelogger-redirect
        image: schmunk42/nginx-redirect:latest
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
