build/k8s/templates/eaglelogger-redis.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: eaglelogger-redis
  labels:
    app: eaglelogger-redis
    project: eaglelogger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eaglelogger-redis
      project: eaglelogger
  template:
    metadata:
      name: eaglelogger-redis
      labels:
        app: eaglelogger-redis
        project: eaglelogger
    spec:
      containers:
      - name: eaglelogger-redis
        image: redis:3.2.11
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 15
          periodSeconds: 5
