build/k8s/templates/eaglelogger-site.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: eaglelogger-site
  labels:
    app: eaglelogger-site
    project: eaglelogger
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eaglelogger-site
      project: eaglelogger
  template:
    metadata:
      name: eaglelogger-site
      labels:
        app: eaglelogger-site
        project: eaglelogger
    spec:
      containers:
      - name: eaglelogger-site
        image: kevashcraft/eaglelogger-site:latest
        ports:
        - containerPort: 80
