build/k8s/templates/eaglelogger-redirect.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: eaglelogger-redirect
  labels:
    app: eaglelogger-redirect
    project: eaglelogger
spec:
  selector:
    app: eaglelogger-redirect
    project: eaglelogger
  ports:
  - port: 80
    targetPort: 80
