build/k8s/templates/eaglelogger-redis.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: eaglelogger-redis
  labels:
    app: eaglelogger-redis
    project: eaglelogger
spec:
  selector:
    app: eaglelogger-redis
    project: eaglelogger
  ports:
  - port: 6379
    targetPort: 6379
