build/k8s/templates/eaglelogger-site.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: eaglelogger-site
  labels:
    app: eaglelogger-site
    project: eaglelogger
spec:
  selector:
    app: eaglelogger-site
    project: eaglelogger
  ports:
  - port: 80
    targetPort: 80
