build/k8s/templates/eaglelogger.ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: eaglelogger
  labels:
    app: eaglelogger-ingress
    project: eaglelogger
  annotations:
    certmanager.k8s.io/acme-challenge-type: 'http01'
    certmanager.k8s.io/issuer: 'letsencrypt-prod'
spec:
  tls:
  - secretName: eaglelogger-com-tls
    hosts:
    - eaglelogger.com
    - api.eaglelogger.com
    - www.eaglelogger.com
  rules:
  - host: eaglelogger.com
    http:
      paths:
      - backend:
          serviceName: eaglelogger-site
          servicePort: 80
  - host: api.eaglelogger.com
    http:
      paths:
      - backend:
          serviceName: eaglelogger-api
          servicePort: 80
  - host: www.eaglelogger.com
    http:
      paths:
      - backend:
          serviceName: eaglelogger-redirect
          servicePort: 80
